vlib/v/checker/tests/invalid_nilref_err.vv
fn main() {
	var := unsafe { &nil }
	println(var)
}
